Fix z-index regression (closes #89 and replaces the fix to #88 made in #86)

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -145,7 +145,6 @@ div.content-wrapper
 .timeline-entry
   position: relative
   margin-top: -150px
-  pointer-events: none
 
   &.first
     margin-top: 10px
@@ -194,7 +193,7 @@ div.content-wrapper
   padding: 20px
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1)
   display: inline-block
-  pointer-events: auto
+  z-index: 1
 
   .tags
     display: flex
